# MIMESim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  terminal_aufruf.txt
include/DCABenchmark/: BindingCompetition.hpp  Constants.hpp  FunctionalSequence.hpp  Mutation.hpp  Species.hpp  Utils.hpp
include/MIMESim/: BindingCompetition.hpp  Constants.hpp  Count.hpp  FunctionalSequence.hpp  Mutation.hpp  Species.hpp  Utils.hpp
results/: pairwise_epistasis.txt  pairwise_kds.txt  parameters.txt  single_kds.txt
results/1d/: 1.txt  2.txt  3.txt  4.txt
results/2d/: 1.txt  2.txt  3.txt  4.txt
src/: BindingCompetition.cpp  CMakeLists.txt  Constants.cpp  Count.cpp  FunctionalSequence.cpp  Mutation.cpp  Species.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  catch.hpp  test_bindingCompetition.cpp  test_constants.cpp  test_functionalSequence.cpp  test_main.cpp  test_mutation.cpp  test_species.cpp  test_utils.cpp
test/testParameters/: parameters_L10_Q4.txt
